--- a/index.html
+++ b/index.html
@@ -4,13 +4,103 @@
   <meta charset="utf-8">
   <title>Booki</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/cdb14ce344.js" crossorigin="anonymous"></script>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 <body>
-    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-    <h2>En plein centre-ville ou en pleine nature</h2>
-    <p><i class="fa-solid fa-location-dot"></i> Marseille, France Rechercher</p>
-    
+    <header>
+<div>
+    <img src="images/logo/Booki.png" alt="logo">
+</div>
+<nav>
+    <a href="#"> Hébergements</a>
+    <a href="#"> Activités</a>
+</nav>
+    </header>
+    <main>
+        <article>
+        <div>
+<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        </div>
+    </article>
+    <article>
+        <div>
+<h2>En plein centre-ville ou en pleine nature</h2>
+        </div>
+    </article>
+    <article>
+        <div>
+            <i class="fa-solid fa-location-dot"></i>
+            <input placeholder="Marseille, France" type="search" id="searchbar">
+            <input type="submit" value="Rechercher">
+            </p>
+        </div>
+    </article>
+    <article>
+        <div>
+    <p><strong>Filtres</strong></p>
+        </div>
+        <div>
+    <button><i class="fa-solid fa-money-bill-simple-wave"></i> Économique</button>
+</div>
+<div>
+    <button><i class="fa-solid fa-person"></i> Familial</button>
+</div>
+<div>
+    <button><i class="fa-solid fa-heart"></i> Romantique</button>
+    <div>
+    <button><i class="fa-solid fa-dog"></i> Animaux autorisés</button>
+        </div>
+    </article>
+    <article>
+        <div>
+        <p><i class="fa-solid fa-info"></i> Plus de 500 logements disponibles dans cette ville</p>
+    </div>
+    </article>
+    <article>
+        <div>
+        <h3>Hébergements à Marseille</h3>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
+            <figcaption><div><strong>Auberge La Canebière</strong></div><div>Nuit à partir de 25€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
+            <figcaption><div><strong>Hôtel du port</strong></div><div>Nuit à partir de 52€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
+            <figcaption><div><strong>Hôtel Les mouettes</strong></div><div>Nuit à partir de 76€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
+            <figcaption><div><strong>Hôtel de la mer</strong></div><div>Nuit à partir de 46€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
+            <figcaption><div><strong>Auberge Le Panier</strong></div><div>Nuit à partir de 23€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
+            <figcaption><div><strong>Auberge Chez Amina</strong></div><div>Nuit à partir de 96€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+    </article>
+        </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
