--- a/index.html
+++ b/index.html
@@ -98,9 +98,83 @@
         </figure>
         </div>
     </article>
+    <article>
+        <div><h4>Les plus populaires</h4></div>
+        <div><i class="fa-solid fa-chart-line"></i></div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+            <figcaption><div><strong>Hôtel le soleil du matin</strong></div><div>Nuit à partir de 128€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+            <figcaption><div><strong>Chambres d'hôtes Au coeur de l'eau</strong></div><div>Nuit à partir de 71€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+            <figcaption><div><strong>Hotêl Bleu et Blanc</strong></div><div>Nuit à partir de 68€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+        </figure>
+        </div>
+    </article>
+    <article>
+        <div><h5>Activités à Marseille</h5></div>
+        <div>
+            <figure>
+            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+            <figcaption><div><strong>Vieux-Port</strong></div></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+            <figcaption><div><strong>Fort de Pomègues</strong></div></figcaption>
+        </figure>
+        </div>
+        <div>
+            <figure>
+            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+            <figcaption><div><strong>Parc national des Calanques</strong></div></figcaption>
+        </figure>
+        <figure>
+            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+            <figcaption><div><strong>Notre-Dame-de-la-Garde</strong></div></figcaption>
+        </figure>
+        </div>
+    </article>
         </main>
     <footer>
-
+<div>
+    <h6>À propos</h6>
+</div>
+<div>
+    <ul>
+    <li><a href="#">Fonctionnement du site</a></li>
+    <li><a href="#">Conditions générales</a></li>
+    <li><a href="#">Données et confidentialité</a></li>
+</ul>
+</div>
+<div>
+    <h7>Nos hébergements</h7>
+</div>
+<div>
+    <ul>
+    <li><a href="#">Charte qualité</a></li>
+    <li><a href="#">Proposer votre hôtel</a></li>
+</ul>
+</div>
+<div>
+    <h7>Assistance</h7>
+</div>
+<div>
+    <ul>
+    <li><a href="#">Centre d'aide</a></li>
+    <li><a href="#">Nous contacter</a></li>
+</ul>
+</div>
     </footer>
 </body>
 </html>
