--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-<div>
-    <img src="images/logo/Booki.png" alt="logo">
-</div>
+        <nav>
+    <a href="#"><img src="images/logo/Booki.png" alt="logo"></a>
+</nav>
 <nav>
     <a href="#"> Hébergements</a>
     <a href="#"> Activités</a>
@@ -20,7 +20,7 @@
     <main>
         <article>
         <div>
-<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+<h2>Trouvez votre hébergement pour des vacances de rêve</h2>
         </div>
     </article>
     <article>
@@ -33,7 +33,6 @@
             <i class="fa-solid fa-location-dot"></i>
             <input placeholder="Marseille, France" type="search" id="searchbar">
             <input type="submit" value="Rechercher">
-            </p>
         </div>
     </article>
     <article>
@@ -41,13 +40,14 @@
     <p><strong>Filtres</strong></p>
         </div>
         <div>
-    <button><i class="fa-solid fa-money-bill-simple-wave"></i> Économique</button>
+    <button><i class="fa-solid fa-money-bill-wave"></i> Économique</button>
 </div>
 <div>
     <button><i class="fa-solid fa-person"></i> Familial</button>
 </div>
 <div>
     <button><i class="fa-solid fa-heart"></i> Romantique</button>
+</div>
     <div>
     <button><i class="fa-solid fa-dog"></i> Animaux autorisés</button>
         </div>
@@ -63,84 +63,280 @@
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="">
-            <figcaption><div><strong>Auberge La Canebière</strong></div><div>Nuit à partir de 25€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière">
+            <figcaption>
+                <div>
+                    <strong>Auberge La Canebière</strong>
+                </div>
+                <div>
+                    Nuit à partir de 25€
+                </div>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-duotone fa-star"></i>
+                                </span>
+                            </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
-            <figcaption><div><strong>Hôtel du port</strong></div><div>Nuit à partir de 52€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Chambre de l'Hôtel du port">
+            <figcaption>
+                <div>
+                    <strong>Hôtel du port</strong>
+                </div>
+                <div>
+                    Nuit à partir de 52€
+                </div>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-duotone fa-star"></i>
+                                </span>
+                            </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
-            <figcaption><div><strong>Hôtel Les mouettes</strong></div><div>Nuit à partir de 76€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Chambre de l'Hôtel Les mouettes">
+            <figcaption>
+                <div>
+                    <strong>Hôtel Les mouettes</strong>
+                </div>
+                <div>
+                    Nuit à partir de 76€
+                </div>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-duotone fa-star"></i>
+                                </span>
+                            </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
-            <figcaption><div><strong>Hôtel de la mer</strong></div><div>Nuit à partir de 46€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Chambre de l'Hôtel de la mer">
+            <figcaption>
+                <div>
+                    <strong>Hôtel de la mer</strong>
+                </div>
+                <div>
+                    Nuit à partir de 46€
+                </div>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                        <span>
+                            <i class="fa-duotone fa-star"></i>
+                        </span>
+                    </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
-            <figcaption><div><strong>Auberge Le Panier</strong></div><div>Nuit à partir de 23€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Chambre de l'Auberge Le Panier">
+            <figcaption>
+                <div>
+                <strong>Auberge Le Panier</strong>
+            </div>
+                <div>
+                    Nuit à partir de 23€
+                </div>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                        <i class="fa-solid fa-star"></i>
+                    </span>
+                        <span>
+                            <i class="fa-solid fa-star"></i>
+                        </span>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                                <span>
+                                    <i class="fa-duotone fa-star"></i>
+                                </span>
+                            </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
-            <figcaption><div><strong>Auberge Chez Amina</strong></div><div>Nuit à partir de 96€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Chambre de l'Auberge Chez Amina">
+            <figcaption>
+                <div>
+                <strong>Auberge Chez Amina</strong>
+            </div>
+                <div>
+                Nuit à partir de 96€
+            </div>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                    <i class="fa-solid fa-star"></i>
+                    </span>
+                    <span>
+                        <i class="fa-duotone fa-star"></i>
+                </span>
+            </figcaption>
         </figure>
         </div>
     </article>
     <article>
-        <div><h4>Les plus populaires</h4></div>
+        <div><h3>Les plus populaires</h3></div>
         <div><i class="fa-solid fa-chart-line"></i></div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
-            <figcaption><div><strong>Hôtel le soleil du matin</strong></div><div>Nuit à partir de 128€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel le soleil du matin">
+            <figcaption>
+                <div>
+                <strong>Hôtel le soleil du matin</strong>
+            </div>
+                <div>
+                Nuit à partir de 128€
+            </div>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                    <i class="fa-duotone fa-star"></i>
+            </span>
+            </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
-            <figcaption><div><strong>Chambres d'hôtes Au coeur de l'eau</strong></div><div>Nuit à partir de 71€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Chambres d'hôtes Au coeur de l'eau">
+            <figcaption>
+                <div>
+                <strong>Chambres d'hôtes Au coeur de l'eau</strong>
+            </div>
+                <div>
+                Nuit à partir de 71€
+            </div>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                    <i class="fa-duotone fa-star"></i>
+            </span>
+            </figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
-            <figcaption><div><strong>Hotêl Bleu et Blanc</strong></div><div>Nuit à partir de 68€</div><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i><span><i class="fa-solid fa-star"></i></span></figcaption>
+            <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Chambre de l'Hotêl Bleu et Blanc">
+            <figcaption>
+                <div>
+                <strong>Hotêl Bleu et Blanc</strong>
+            </div>
+                <div>
+                    Nuit à partir de 68€
+                </div>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                <i class="fa-solid fa-star"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+                    <span>
+                        <i class="fa-duotone fa-star"></i>
+            </span>
+            </figcaption>
         </figure>
         </div>
     </article>
     <article>
-        <div><h5>Activités à Marseille</h5></div>
+        <div><h3>Activités à Marseille</h3></div>
         <div>
             <figure>
-            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
+            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux-Port">
             <figcaption><div><strong>Vieux-Port</strong></div></figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
+            <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
             <figcaption><div><strong>Fort de Pomègues</strong></div></figcaption>
         </figure>
         </div>
         <div>
             <figure>
-            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
+            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc national des Calanques">
             <figcaption><div><strong>Parc national des Calanques</strong></div></figcaption>
         </figure>
         <figure>
-            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
+            <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre Dame de la Garde">
             <figcaption><div><strong>Notre-Dame-de-la-Garde</strong></div></figcaption>
         </figure>
         </div>
@@ -148,9 +344,7 @@
         </main>
     <footer>
 <div>
-    <h6>À propos</h6>
-</div>
-<div>
+    <h4>À propos</h4>
     <ul>
     <li><a href="#">Fonctionnement du site</a></li>
     <li><a href="#">Conditions générales</a></li>
@@ -158,18 +352,14 @@
 </ul>
 </div>
 <div>
-    <h7>Nos hébergements</h7>
-</div>
-<div>
+    <h4>Nos hébergements</h4>
     <ul>
     <li><a href="#">Charte qualité</a></li>
     <li><a href="#">Proposer votre hôtel</a></li>
 </ul>
 </div>
 <div>
-    <h7>Assistance</h7>
-</div>
-<div>
+    <h4>Assistance</h4>
     <ul>
     <li><a href="#">Centre d'aide</a></li>
     <li><a href="#">Nous contacter</a></li>
