--- a/index.html
+++ b/index.html
@@ -69,16 +69,19 @@
         </div>
     </article>
     <article>
-        <div class="info">
-        <p><i class="fa-solid fa-info"></i> Plus de 500 logements disponibles dans cette ville</p>
+        <div class="infobar">
+        <p>
+            <i class="fa-solid fa-info fa-2xs"></i>
+             Plus de 500 logements disponibles dans cette ville
+            </p>
     </div>
     </article>
     <article>
         <div class="cards">
-        <div id="cards1">
-        <div>
+        <div class="card_title">
         <h3>Hébergements à Marseille</h3>
         </div>
+        <div id="cards1">
         <div class="card">
             <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Chambre de l'Auberge La Canebière">
             <p>
@@ -235,16 +238,18 @@
                 </span>
             </p>
         </div>
+        <div class="more">
+            <p>Afficher plus</p>
+                    </div>
     </div>
     </article>
     <article>
-        <div id="cards2">
+        <div class="cards_2">
         <div>
             <h3>Les plus populaires</h3>
-        </div>
-        <div>
             <i class="fa-solid fa-chart-line"></i>
         </div>
+        <div id="cards2">
         <div class="card2">
             <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Chambre de l'Hôtel le soleil du matin">
             <p>
@@ -364,6 +369,7 @@
         </figure>
         </div>
     </div>
+</div>
     </article>
         </main>
     <footer>
